Fixed email and list alignment

--- a/src/components/Pages.css
+++ b/src/components/Pages.css
@@ -9,6 +9,12 @@
     list-style-position: inside;
 }
 
+ol {
+    width: fit-content;
+    text-align: left;
+    margin: 0 auto;
+}
+
 li {
     font-weight: bold;
 }
